--- a/client/src/scenes/Dashboard/styles.module.scss
+++ b/client/src/scenes/Dashboard/styles.module.scss
@@ -77,6 +77,7 @@ $secondary-color: #d1d5da;
 }
 
 :local(.navbar_wrapper) {
+  margin-bottom: 25px;
   position: sticky;
   top: 0;
   background-color: #fff;
@@ -126,7 +127,7 @@ $secondary-color: #d1d5da;
   }
 }
 
-:global(.ui.container):local(.pinned_header) {
+:global(.ui.container):local(.section_header) {
   margin-top: 20px;
   display: flex;
   justify-content: space-between;
